<resources>
    <string name="app_name">Savemaker</string>
    <string name="home">Home</string>
    <string name="reports">Reports</string>
    <string name="balance_overview">Balance Overview</string>
    <string name="settings">Settings</string>

    <string name="total">Total</string>
    <string name="recent_transactions">Recent transactions</string>

    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="ok">OK</string>

    <string name="income">Income</string>
    <string name="expense">Expense</string>

    <string name="income_categories">Income categories</string>
    <string name="expense_categories">Expense categories</string>

    <string name="dialog_title_income">Add income</string>
    <string name="dialog_title_expense">Add expense</string>
    <string name="category">Category</string>
    <string name="date">Date</string>
    <string name="select_date">Select date</string>
    <string name="amount">Amount</string>
    <string name="enter_amount">Enter amount</string>
    <string name="add_note">Add note here…</string>
    <string name="note">Note</string>

    <string name="details">Details</string>
    <string name="date_colon">Date:</string>
    <string name="amount_colon">Amount:</string>
    <string name="category_colon">Category:</string>
    <string name="note_colon">Note:</string>

    <string name="from_colon">From:</string>
    <string name="to_colon">To:</string>
    <!-- menu labels -->
    <string name="menu_home">Home</string>

    <string name="no_chart_data_text">No data. Please choose valid dates above.</string>

    <string name="settings_priority_list_title">Priority List</string>
    <string name="settings_priority_list_tooltip">Prioritize which income types will be used first by default</string>
    <string name="settings_priority_list_button">Edit priority list</string>
    <string name="settings_preferred_priority_title">Preferred priorities</string>
    <string name="settings_preferred_priority_tooltip">Prioritize which income type will be attempted to be used when creating expenses of each expense category</string>
    <string name="settings_preferred_priority_button">Edit preferred priority</string>

    <string name="priority_list">Priority List</string>
    <string name="priority_list_tooltip">Change the default priority of income type balances by dragging and dropping the elements. Don\'t forget to confirm your changes!</string>
    <string name="preferred_used_income_category">Preferred used income category</string>
    <string name="preferred_priority_tooltip">Change which category will be first prioritized when adding an expense, which will be attempted before checking the default priority list. Don\'t forget to confirm your changes!</string>

</resources>