<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.savemaker.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_reports"
        android:name="com.example.savemaker.reports.ReportsFragment"
        android:label="@string/reports"
        tools:layout="@layout/fragment_reports"
        />

    <fragment
        android:id="@+id/nav_overview"
        android:name="com.example.savemaker.overview.OverviewFragment"
        android:label="@string/balance_overview"
        tools:layout="@layout/fragment_overview"/>

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.savemaker.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings"/>


</navigation>