<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:id="@+id/details_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp" />

    <!-- Category Name -->
    <TextView
        android:id="@+id/details_category_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category_colon"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/details_dialog_title"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="24dp" />

    <TextView
        android:id="@+id/details_category_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintTop_toTopOf="@id/details_category_name_label"
        app:layout_constraintBottom_toBottomOf="@id/details_category_name_label"
        app:layout_constraintStart_toEndOf="@id/details_category_name_label"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Amount -->
    <TextView
        android:id="@+id/details_amount_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amount_colon"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/details_category_name"
        app:layout_constraintEnd_toEndOf="@id/details_category_name_label"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/details_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintStart_toEndOf="@id/details_amount_label"
        app:layout_constraintTop_toTopOf="@id/details_amount_label"
        app:layout_constraintBottom_toBottomOf="@id/details_amount_label"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Date -->
    <TextView
        android:id="@+id/details_date_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_colon"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/details_amount"
        app:layout_constraintEnd_toEndOf="@id/details_amount_label"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/details_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintStart_toEndOf="@id/details_date_label"
        app:layout_constraintTop_toTopOf="@id/details_date_label"
        app:layout_constraintBottom_toBottomOf="@id/details_date_label"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Notes -->
    <TextView
        android:id="@+id/details_note_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/note"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/details_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/details_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintTop_toBottomOf="@id/details_note_label"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
