<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".reports.ChartReportFragment">

    <LinearLayout
        android:id="@+id/reports_chart_beginning_date_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/reports_chart_ending_date_layout"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/reports_chart_beginning_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from_colon"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/reports_chart_beginning_date_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/select_date"
            android:padding="12dp"
            android:background="?attr/selectableItemBackground"
            android:textSize="16sp"
            android:clickable="true"
            android:focusable="true"
            android:textColor="@android:color/black"
            android:layout_marginStart="8dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/reports_chart_ending_date_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/reports_chart_beginning_date_layout"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/reports_chart_ending_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_colon"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/reports_chart_ending_date_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/select_date"
            android:padding="12dp"
            android:background="?attr/selectableItemBackground"
            android:textSize="16sp"
            android:clickable="true"
            android:focusable="true"
            android:textColor="@android:color/black"
            android:layout_marginStart="8dp" />
    </LinearLayout>

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/reports_chart_income_pie_chart"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reports_chart_ending_date_layout"/>

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/reports_chart_expense_pie_chart"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reports_chart_income_pie_chart"/>

</androidx.constraintlayout.widget.ConstraintLayout>
